--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,14 @@
   ],
   "host_permissions": [
 		"<all_urls>"
-	]
+	],
+	
+	"icons": {
+    "16": "icon/icon16.png",
+    "32": "icon/icon32.png",
+    "48": "icon/icon48.png",
+    "128": "icon/icon128.png"
+  },
+   "author": "Yuu (@mouse_soft_y)"
+	
 }
